--- a/app/src/main/res/layout/progress_graphs_fragment.xml
+++ b/app/src/main/res/layout/progress_graphs_fragment.xml
@@ -263,12 +263,13 @@
                         android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:text="..."
-                        android:textSize="16sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/white"
                         android:layout_marginBottom="10dp"
                         android:textAlignment="center"
                         android:layout_marginLeft="3dp"
-                        android:layout_marginRight="10dp" />
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="3dp"/>
 
                     <ImageButton
                         android:id="@+id/btnNextMonth"
